tentativa de correção

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,15 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "resolutions": {
+    "autoprefixer": "10.4.5"
+  },
+
+
+
+
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -44,4 +53,6 @@
       "last 1 safari version"
     ]
   }
+
+  
 }
